# lib-derec

./: AUTHORS.md  CONTRIBUTING.md  Cargo.toml  README.md
bindings/node/: Makefile  index.js  index.js.map  index.ts  package-lock.json  package.json  run_test.sh
cryptography/: Cargo.toml
cryptography/src/: lib.rs
cryptography/src/channel/: mod.rs
cryptography/src/pairing/: mod.rs  pairing_ecies.rs  pairing_mlkem.rs
cryptography/src/vss/: mod.rs  shamir.rs  utils.rs
protobufs/: committedderecshare.proto  contact.proto  derecsecret.proto  pair.proto
